# Sound_SynthWjsons

./: .gitignore  AUDIO_SYSTEM_README.md  BUILD.md  BUILD_INSTRUCTIONS.md  BUILD_INSTRUCTIONS_WINDOWS.md  BUILD_STATUS.md  BUILD_TROUBLESHOOTING.md  CMakeLists.txt  CMakePresets.json  CURRENT_ISSUES_ANALYSIS.md  CURRENT_STATUS_SUMMARY.md  DEBUG_STRING_VIEW_ISSUE.md  DELIVERABLES_MANIFEST.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  Makefile  PROJECT_RECREATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_FIX.md  QUICK_FIX_MAKE.md  QUICK_START.md  README.md  REBUILD_STATUS.md  RESTART_PLAN.md  TECHNICAL_DETAILS.md  UPDATED_FIX_INSTRUCTIONS.md  audio_interface.py  build.sh  build_and_run.sh  build_and_run_fixed.sh  build_and_run_integrated.sh  build_web.sh  core_models.py  cpp_engine.py  decision_heads.py  demo.py  electronic_track.json  example_usage.cpp  graph_builder.py  group.json  (+13 more)
config/: preset_schema.yaml  quality_weights.json  roles.yaml
docs/: one_click_sound_objectives.md  windows_msys2_build.md
docs/api/: python_cpp_bridge.md
examples/: advanced_synth.json  simple_synth.json
include/: audio_safety.h  core_types.h  decision_heads.h  dsp_ir.h  main_app.h  moo_optimization.h  normalization.h  preset_parser.h  roles_policies.h  semantic_fusion.h  simple_json.h
src/: CMakeLists.txt  audio_safety.cpp  core_types.cpp  decision_heads.cpp  dsp_ir.cpp  main.cpp  main_app.cpp  moo_optimization.cpp  normalization.cpp  preset_parser.cpp  python_bindings.cpp  roles_policies.cpp  semantic_fusion.cpp
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: CMakeLists.txt  test_system.cpp
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
web/src/: App.jsx  App.tsx  index.css
web/src/components/: EmptyState.tsx  ErrorBoundary.tsx  Header.tsx  LoadingSpinner.tsx  PresetDetail.tsx  PresetGrid.tsx  PresetTile.tsx  StatusBar.tsx
web/src/contexts/: AudioContext.tsx  PresetContext.tsx  index.ts
